@@ -168,6 +168,380 @@
     </dependencies>
   </dependencyManagement>
 
+<<<<<<< HEAD
+=======
+  <dependencies>
+    <dependency>
+      <groupId>io.camunda</groupId>
+      <artifactId>zeebe-build-tools</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <!-- Common test dependencies-->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>${junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-launcher</artifactId>
+      <version>${junit.platform.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>${junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-commons</artifactId>
+      <version>${junit.platform.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>${assertj.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-inline</artifactId>
+      <version>${mockito-inline.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mock-server</groupId>
+      <artifactId>mockserver-junit-jupiter</artifactId>
+      <version>${mockserver.version}</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>io.github.netmikey.logunit</groupId>
+      <artifactId>logunit-core</artifactId>
+      <version>2.0.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpmime</artifactId>
+      <version>${version.httpclient}</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <version>4.3.0</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-codec-http</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+      <version>${version.spring-boot}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-logging</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>3.8.1</version>
+          <configuration>
+            <failOnWarning>${dependencyAnalyze.failOnWarning}</failOnWarning>
+            <ignoredUnusedDeclaredDependencies combine.children="append">
+              <dep>io.camunda:identity-spring-boot-starter</dep>
+              <dep>io.micrometer:micrometer-registry-prometheus</dep>
+              <dep>jakarta.annotation:jakarta.annotation-api</dep>
+              <dep>jakarta.servlet:jakarta.servlet-api</dep>
+              <dep>org.apache.httpcomponents.core5:httpcore5</dep>
+              <dep>org.apache.logging.log4j:log4j-api</dep>
+              <dep>org.apache.logging.log4j:log4j-slf4j2-impl</dep>
+              <dep>org.codehaus.janino:janino</dep>
+              <dep>org.eclipse.angus:jakarta.mail</dep>
+              <dep>org.springframework:spring-tx</dep>
+              <dep>org.springframework.boot:spring-boot-starter-tomcat</dep>
+              <dep>org.springframework.boot:spring-boot-starter-web</dep>
+              <dep>software.amazon.awssdk:sdk-core</dep>
+              <dep>software.amazon.awssdk:sts</dep>
+              <dep>org.javassist:javassist</dep>
+              <dep>org.springframework.boot:spring-boot-starter-validation</dep>
+
+              <!-- test dependencies -->
+              <dep>com.sun.mail:jakarta.mail</dep>
+              <dep>io.camunda:zeebe-build-tools</dep>
+              <dep>io.camunda.optimize:optimize-backend</dep>
+              <dep>io.camunda.optimize:optimize-backend:test-jar</dep>
+              <dep>io.camunda.optimize:upgrade-optimize</dep>
+              <dep>io.github.netmikey.logunit:logunit-core</dep>
+              <dep>io.github.netmikey.logunit:logunit-log4j2</dep>
+              <dep>io.netty:netty-codec-http</dep>
+              <dep>org.apache.httpcomponents:httpmime</dep>
+              <dep>org.apache.logging.log4j:log4j-core</dep>
+              <dep>org.apache.logging.log4j:log4j-slf4j-impl</dep>
+              <dep>org.apache.logging.log4j:log4j-slf4j2-impl</dep>
+              <dep>org.assertj:assertj-core</dep>
+              <dep>org.awaitility:awaitility</dep>
+              <dep>org.junit.jupiter:junit-jupiter-api</dep>
+              <dep>org.junit.jupiter:junit-jupiter-engine</dep>
+              <dep>org.junit.jupiter:junit-jupiter-params</dep>
+              <dep>org.junit.platform:junit-platform-commons</dep>
+              <dep>org.junit.platform:junit-platform-launcher</dep>
+              <dep>org.mock-server:mockserver-junit-jupiter</dep>
+              <dep>org.mockito:mockito-inline</dep>
+              <dep>org.mockito:mockito-junit-jupiter</dep>
+              <dep>org.springframework.boot:spring-boot-starter-test</dep>
+              <dep>org.glassfish.jersey.core:jersey-client</dep>
+              <dep>org.glassfish.jersey.media:jersey-media-json-jackson</dep>
+            </ignoredUnusedDeclaredDependencies>
+            <ignoredNonTestScopedDependencies combine.children="append">
+              <dep>com.fasterxml.jackson.datatype:jackson-datatype-jdk8</dep>
+              <dep>com.fasterxml.jackson.datatype:jackson-datatype-jsr310</dep>
+              <dep>commons-collections:commons-collections</dep>
+              <dep>org.apache.httpcomponents:httpcore-nio</dep>
+              <dep>org.apache.tika:tika-core</dep>
+              <dep>org.opensearch.client:opensearch-java</dep>
+              <dep>org.opensearch.client:opensearch-rest-client</dep>
+              <dep>com.nimbusds:nimbus-jose-jwt</dep>
+            </ignoredNonTestScopedDependencies>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>templating-maven-plugin</artifactId>
+          <version>3.0.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>build-helper-maven-plugin</artifactId>
+          <version>3.6.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>3.4.2</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${surefire-plugin.version}</version>
+          <configuration>
+            <skipTests>${skip.unit.tests}</skipTests>
+            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+            <useModulePath>false</useModulePath>
+            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED
+              --add-opens java.base/java.util=ALL-UNNAMED</argLine>
+            <systemPropertyVariables>
+              <database.type>${database.type}</database.type>
+            </systemPropertyVariables>
+          </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>org.junit.jupiter</groupId>
+              <artifactId>junit-jupiter-engine</artifactId>
+              <version>${junit.jupiter.version}</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${surefire-plugin.version}</version>
+          <configuration>
+            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+            <useModulePath>false</useModulePath>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>3.4.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>3.7.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>3.6.0</version>
+          <configuration>
+            <createDependencyReducedPom>false</createDependencyReducedPom>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>3.5.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>3.1.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.sonatype.plugins</groupId>
+          <artifactId>nexus-staging-maven-plugin</artifactId>
+          <version>1.7.0</version>
+          <extensions>true</extensions>
+          <configuration>
+            <serverId>camunda-nexus</serverId>
+            <nexusUrl>https://artifacts.camunda.com/artifactory/</nexusUrl>
+            <skipStaging>true</skipStaging>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>3.1.4</version>
+        </plugin>
+        <plugin>
+          <groupId>com.github.eirslett</groupId>
+          <artifactId>frontend-maven-plugin</artifactId>
+          <version>1.15.1</version>
+        </plugin>
+        <plugin>
+          <groupId>com.mycila</groupId>
+          <artifactId>license-maven-plugin</artifactId>
+          <version>4.6</version>
+        </plugin>
+        <!-- Google code format plugin -->
+        <plugin>
+          <groupId>com.diffplug.spotless</groupId>
+          <artifactId>spotless-maven-plugin</artifactId>
+          <version>2.44.3</version>
+          <configuration>
+            <java>
+              <includes>
+                <include>**/*.java</include>
+              </includes>
+              <googleJavaFormat>
+                <version>${google-java-format.plugin.version}</version>
+                <style>GOOGLE</style>
+              </googleJavaFormat>
+            </java>
+          </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>com.google.googlejavaformat</groupId>
+              <artifactId>google-java-format</artifactId>
+              <version>${google-java-format.plugin.version}</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
+    <plugins>
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.commonjava.maven.plugins</groupId>
+        <artifactId>directory-maven-plugin</artifactId>
+        <version>1.0</version>
+        <executions>
+          <execution>
+            <id>directories</id>
+            <goals>
+              <goal>directory-of</goal>
+            </goals>
+            <phase>initialize</phase>
+            <configuration>
+              <property>parent.basedir</property>
+              <project>
+                <groupId>io.camunda.optimize</groupId>
+                <artifactId>optimize-parent</artifactId>
+              </project>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <configuration>
+          <licenseSets>
+            <licenseSet>
+              <header>${maven.multiModuleProjectDirectory}/parent/COPYING-HEADER.txt</header>
+              <includes>
+                <include>**/*.java</include>
+              </includes>
+            </licenseSet>
+          </licenseSets>
+          <mapping>
+            <java>SLASHSTAR_STYLE</java>
+          </mapping>
+        </configuration>
+        <executions>
+          <execution>
+            <id>check-java-copyright</id>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <phase>prepare-package</phase>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.14.0</version>
+        <configuration>
+          <release>${maven.compiler.target}</release>
+        </configuration>
+      </plugin>
+    </plugins>
+
+  </build>
+
+>>>>>>> 6a7a82bb (build: have optimize import zeebe-build-tools)
   <profiles>
 
     <!-- release profile-->
